--- a/index.ipynb
+++ b/index.ipynb
@@ -30,9 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -52,9 +65,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "d41577d6-0258-11e9-b4ed-f710078b6d56",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          2,
+          3,
+          4
+         ]
+        },
+        {
+         "type": "scatter",
+         "uid": "d41579f2-0258-11e9-b4ed-f710078b6d56",
+         "x": [
+          2,
+          3,
+          4
+         ],
+         "y": [
+          5,
+          3,
+          4
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Our sample plot"
+       }
+      },
+      "text/html": [
+       "<div id=\"5a4d1eb5-cbbe-4b05-82d0-50c7f754ec8e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5a4d1eb5-cbbe-4b05-82d0-50c7f754ec8e\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"d437066c-0258-11e9-b4ed-f710078b6d56\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"d4370806-0258-11e9-b4ed-f710078b6d56\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"5a4d1eb5-cbbe-4b05-82d0-50c7f754ec8e\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"5a4d1eb5-cbbe-4b05-82d0-50c7f754ec8e\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"d437066c-0258-11e9-b4ed-f710078b6d56\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"d4370806-0258-11e9-b4ed-f710078b6d56\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sample_trace = {'x': [1, 2, 3], 'y': [2, 3, 4]}\n",
     "other_sample_trace = {'x': [2, 3, 4], 'y': [5, 3, 4]}\n",
@@ -531,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
