--- a/index.ipynb
+++ b/index.ipynb
@@ -314,21 +314,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-10-bb360c1d1247>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-11-1a5f9b6a69c3>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-bb360c1d1247>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'x' : x_values, 'y' : y_values, 'mode'= mode, 'name' = name}\u001b[0m\n\u001b[0m                                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-1a5f9b6a69c3>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {'x' : x_values, 'y' : y_values, 'mode' = mode, 'name' = name}\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "     return {'x' : x_values, 'y' : y_values,'mode' = mode, 'name' = name}"
+    "     return {'x' : x_values, 'y' : y_values, 'mode' : mode, 'name'  name}"
    ]
   },
   {
