Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -287,14 +287,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "type": "scatter",
+         "uid": "192c4798-02e3-11e9-8227-191efd0bfcbd",
+         "x": [
+          1,
+          3,
+          2
+         ],
+         "y": [
+          1,
+          2,
+          5
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "my_trace",
+         "type": "scatter",
+         "uid": "192c4a22-02e3-11e9-8227-191efd0bfcbd",
+         "x": [
+          1,
+          3,
+          2
+         ],
+         "y": [
+          1,
+          2,
+          5
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"ac69884c-21a9-4554-9471-0a1586eb2baf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ac69884c-21a9-4554-9471-0a1586eb2baf\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"193cfb38-02e3-11e9-8227-191efd0bfcbd\"}, {\"mode\": \"lines\", \"name\": \"my_trace\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"193cfd72-02e3-11e9-8227-191efd0bfcbd\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"ac69884c-21a9-4554-9471-0a1586eb2baf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"ac69884c-21a9-4554-9471-0a1586eb2baf\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"193cfb38-02e3-11e9-8227-191efd0bfcbd\"}, {\"mode\": \"lines\", \"name\": \"my_trace\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"193cfd72-02e3-11e9-8227-191efd0bfcbd\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trace0 = build_trace(data)\n",
     "trace0 = build_trace(data, 'markers')\n",
-    "# trace1 = build_trace(data, 'lines', 'my_trace')\n",
-    "# plot({'data':[trace0, trace1]})"
+    "trace1 = build_trace(data, 'lines', 'my_trace')\n",
+    "plot({'data':[trace0, trace1]})"
    ]
   },
   {
