Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -539,7 +539,7 @@
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    return "
+    "    return {'x' : x_range}"
    ]
   },
   {
