--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -728,13 +728,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "type": "scatter",
+         "uid": "6a641784-02e4-11e9-8227-191efd0bfcbd",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          6,
+          3,
+          1
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Going Down...",
+        "xaxis": {
+         "range": [
+          -1,
+          4
+         ]
+        },
+        "yaxis": {
+         "range": [
+          0,
+          7
+         ]
+        }
+       }
+      },
+      "text/html": [
+       "<div id=\"2e825269-2ca9-4799-ae9f-a76ba942cd60\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2e825269-2ca9-4799-ae9f-a76ba942cd60\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 2, 3], \"y\": [6, 3, 1], \"type\": \"scatter\", \"uid\": \"6a699204-02e4-11e9-8227-191efd0bfcbd\"}], {\"title\": \"Going Down...\", \"xaxis\": {\"range\": [-1, 4]}, \"yaxis\": {\"range\": [0, 7]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"2e825269-2ca9-4799-ae9f-a76ba942cd60\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"2e825269-2ca9-4799-ae9f-a76ba942cd60\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 2, 3], \"y\": [6, 3, 1], \"type\": \"scatter\", \"uid\": \"6a699204-02e4-11e9-8227-191efd0bfcbd\"}], {\"title\": \"Going Down...\", \"xaxis\": {\"range\": [-1, 4]}, \"yaxis\": {\"range\": [0, 7]}}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "another_trace = trace_values([1, 2, 3], [6, 3, 1])\n",
     "another_layout = layout([-1, 4], [0, 7], {'title': 'Going Down...'})\n",
-    "# plot({'data': [another_trace], 'layout': another_layout})"
+    "plot({'data': [another_trace], 'layout': another_layout})"
    ]
   },
   {
